# PyAOC

./: Makefile  README.md  pyproject.toml  requirements.txt
pyaoc/: create_day.py  pyaoc.py
source_doc/: check_day.rst  check_day_structure.rst  check_parameters.rst  conf.py  day.rst  day_benchmark.rst  day_creation.rst  day_launch.rst  day_subject.rst  day_year.rst  index.rst  readme_generation.rst
src/: README.md  pyproject.toml
src/pyaoc/: check_day.py  check_day_structure.py  check_parameters.py  day.py  day_benchmark.py  day_creation.py  day_launch.py  day_subject.py  part.jinja2  pyaoc.py  readme_generation.py
src/tests/: test_check_day.py  test_check_day_structure.py  test_check_parameters.py  test_day_benchmark.py  test_day_creation.py  test_day_launch.py  test_day_subject.py  test_day_year.py  test_readme_generation.py
