[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaoc"
version = "0.0.1"
license = {file = "LICENSE"}

description = "Python Advent of Code utilities"
authors = [{name = "Aurélien TRONCY"}]
requires-python = ">=3.9"
readme = "README.md"
keywords = ["adventofcode", "aoc", "advent of code"]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Programming Language :: Python',
    'Operating System :: Unix',
]
dependencies = [
    "Jinja2 >= 3.1.2"
]

[tool.setuptools.package-data]
pyaoc = ["*.jinja2"]


[project.scripts]
# example for cli script :  pyaoc = "pyaoc.pyaoc:pyaoc"
pyaoc = "pyaoc.pyaoc:main"